백엔드 폴더 구조 변경

--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@graphql-tools/schema": "^9.0.3",
     "@prisma/client": "^4.3.1",
     "apollo-server": "^2.25.2",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.2",
     "graphql": "^15.8.0",
-    "graphql-tools": "^8.3.5"
+    "graphql-tools": "^8.3.5",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.0",
